updated some http to resource

--- a/www/index.html
+++ b/www/index.html
@@ -43,7 +43,6 @@
         <!--controller-->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
-    <script src="scripts/controllers/edit.js"></script>
     <script src="scripts/controllers/settings.js"></script>
     <script src="scripts/controllers/group.js"></script>
     <script src="scripts/controllers/plug.js"></script>
@@ -51,7 +50,8 @@
 
         <!--services-->
     <script src="scripts/services/localStorageService.js"></script>
-    <script src="scripts/services/backendService.js"></script>
+    <!--<script src="scripts/services/backendService.js"></script>-->
+    <script src="scripts/services/backendResources.js"></script>
     <!-- endbuild -->
   </body>
 </html>
